# weather_app

./: .gitignore  CHANGELOG.md  README.md  pre-commit-config.yaml  pyproject.toml  weather_data.db
src/: app.py  config.json  config.yaml  end_point_restructured.py
src/templates/: current.html  forecast.html  index.html  weather.html
templates/: forecast_data.html  index.html
